<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/B_filtr_pc"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:width="100dp"
        android:background="@drawable/button_circle_corner"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/pc_main_button"
        app:layout_constraintEnd_toStartOf="@+id/B_filtr_ps4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B_filtr_ps4"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:width="100dp"
        android:background="@drawable/button_circle_corner"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/ps4_main_button"
        app:layout_constraintEnd_toStartOf="@+id/B_filtr_xone"
        app:layout_constraintStart_toEndOf="@+id/B_filtr_pc"
        app:layout_constraintTop_toTopOf="@+id/B_filtr_pc" />

    <Button
        android:id="@+id/B_filtr_xone"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:width="100dp"
        android:background="@drawable/button_circle_corner"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/xone_main_button"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/B_filtr_fav"
        app:layout_constraintStart_toEndOf="@+id/B_filtr_ps4"
        app:layout_constraintTop_toTopOf="@+id/B_filtr_ps4" />

    <Button
        android:id="@+id/B_filtr_fav"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:background="@drawable/button_circle_corner"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/favourite_main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/B_filtr_xone"
        app:layout_constraintTop_toTopOf="@+id/B_filtr_xone" />

    <ImageView
        android:id="@+id/IV_recycle_empty"
        android:layout_width="172dp"
        android:layout_height="146dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/empty_list"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty" />

    <TextView
        android:id="@+id/TV_recycle_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/empty_list"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_recycle_empty" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#F0F4F7"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>

