<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productDetails.onboarding.tabs.GaleryTab">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TV_decr_second_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/first_card_product_details"
            android:textColor="@color/nonActive"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/TV_galery_second_screen"
            app:layout_constraintTop_toTopOf="@+id/TV_galery_second_screen" />

        <TextView
            android:id="@+id/TV_galery_second_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/second_card_product_details"
            android:textColor="@color/darkGreen"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/TV_details_second_screen"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_details_second_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_card_product_details"
            android:textColor="@color/nonActive"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/TV_galery_second_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/IV_second_screen_one"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:contentDescription="image_1"
        android:scaleType="centerCrop"
        android:src="@drawable/example_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IV_second_screen_two"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:contentDescription="image_2"
        android:scaleType="centerCrop"
        android:src="@drawable/example_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_second_screen_one" />

    <ImageView
        android:id="@+id/IV_second_screen_three"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:contentDescription="image_3"
        android:scaleType="centerCrop"
        android:src="@drawable/example_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_second_screen_two" />

</androidx.constraintlayout.widget.ConstraintLayout>